Finish the website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
 </head>
 <body>
 <h1 id="page_title">Discover hidden places in the world around you</h1>
-<a href="https://f14d7551fc914f2c81027897fa5c9d29.cc-propeller.cloud/#"></a>
+<div>
+<a href="https://f14d7551fc914f2c81027897fa5c9d29.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
+</div>
+<div>
+<video autoplay>
+  <source src="resources/excursion.qt" type="video/ogg">
+</video>
+</div>
+<h2>Your personal travel guide</h2>
+<div>
+<p>
+Excursion remembers places you like, and recommends new points of interest around you.
+</p>
+<img src="resources/camp.jpg" alt="camp">
+<p>
+<img src="resources/phone.png" alt="phone">
+</p>
+<h2>Coming Soon for iPhone and Android</h2>
+<a href="https://f14d7551fc914f2c81027897fa5c9d29.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
+<p id="footer">
+&copy; Excursion
+</p>
+</div>
 </body>
 </html>
 
